[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/About.gd" type="Script" id=1]
[ext_resource path="res://Art/GUI/tutorial.png" type="Texture" id=2]
[ext_resource path="res://Scenes/ParallaxBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/GUI/configuration.png" type="Texture" id=4]
[ext_resource path="res://Art/GUI/sfx_on.png" type="Texture" id=5]
[ext_resource path="res://Art/GUI/sfx_off.png" type="Texture" id=6]
[ext_resource path="res://Art/GUI/keys.png" type="Texture" id=7]
[ext_resource path="res://Art/GUI/home.png" type="Texture" id=8]
[ext_resource path="res://Art/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "sfx_on",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "sfx_off",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 10 )

[node name="About" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" parent="." instance=ExtResource( 3 )]

[node name="Screen" type="Control" parent="."]
margin_right = 720.0
margin_bottom = 1280.0
__meta__ = {
"_edit_lock_": true
}

[node name="Down" type="Control" parent="Screen"]
margin_top = 1150.0
margin_right = 40.0
margin_bottom = 1190.0

[node name="Settings" type="Button" parent="Screen/Down"]
margin_left = 516.0
margin_right = 576.0
margin_bottom = 54.0
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 4 )
flat = true

[node name="sfx" type="Button" parent="Screen/Down/Settings"]
visible = false
margin_left = -70.0
margin_right = -10.0
margin_bottom = 54.0
flat = true

[node name="sfx" type="AnimatedSprite" parent="Screen/Down/Settings/sfx"]
position = Vector2( 5.98393, 3.41943 )
frames = SubResource( 1 )
animation = "sfx_on"
centered = false

[node name="Store" type="Button" parent="Screen/Down"]
margin_left = 372.0
margin_right = 432.0
margin_bottom = 54.0
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 7 )
flat = true

[node name="tutorials" type="Button" parent="Screen/Down"]
margin_left = 228.0
margin_right = 288.0
margin_bottom = 54.0
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 2 )
flat = true

[node name="home" type="Button" parent="Screen/Down"]
margin_left = 84.0
margin_right = 144.0
margin_bottom = 54.0
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credit_menu" type="Control" parent="Screen"]
margin_right = 720.0
margin_bottom = 1100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="Screen/Credit_menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -171.0
margin_top = 50.0
margin_right = 171.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 2 )
text = "creditos"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arte" type="Label" parent="Screen/Credit_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -209.5
margin_top = -350.0
margin_right = 209.5
margin_bottom = -209.0
custom_fonts/font = SubResource( 3 )
text = "arte
Cristian vega"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Musica" type="Label" parent="Screen/Credit_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.0
margin_top = -150.0
margin_right = 255.0
margin_bottom = -9.0
custom_fonts/font = SubResource( 3 )
text = "musica
audionautix.com"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desarrollo" type="Label" parent="Screen/Credit_menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -260.5
margin_top = 50.0
margin_right = 260.5
margin_bottom = 191.0
custom_fonts/font = SubResource( 3 )
text = "Desarrollo
Stev Castellanos"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Screen/Down/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Screen/Down/Settings/sfx" to="." method="_on_sfx_pressed"]
[connection signal="pressed" from="Screen/Down/tutorials" to="." method="_on_tutorials_pressed"]
[connection signal="pressed" from="Screen/Down/home" to="." method="_on_home_pressed"]
